# notifications_sprint_1

./: .gitignore  Dockerfile  Makefile  README.md  database.erd  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql  test-requirements.txt  tox.ini
.github/: ci-compose.override.yml
.github/workflows/: tests_and_linters.yml
admin_service/: Dockerfile  requirements.txt  wait_for_postgres.py
admin_service/broadcasts/: admin.py  apps.py  models.py  scheduler.py
admin_service/broadcasts/migrations/: 0001_initial.py
admin_service/broadcasts/services/: kafka_producer.py  rendering.py  users.py
admin_service/config/: .env.example  settings.py  urls.py
admin_service/config/components/: application.py  database.py  internationalization.py  localization.py  messaging.py
admin_service/movies/: admin.py  auth.py  models.py  tests.py  views.py
auth_lib/: utils.py
auth_service/src/: alembic.ini  main.py
auth_service/src/alembic/: env.py
auth_service/src/api/: swagger.py
auth_service/src/auth/: auth.py  errors.py  exceptions.py  oauth_settings.py
auth_service/src/cli/: admin.py
auth_service/src/core/: config.py
auth_service/src/db/: postgres.py
auth_service/src/repositories/: sqlalchemy_repository.py
common/: .env.example  database_dump.sql  kafka_etl_configs.py  logger.py  logstash.conf
comparison_clickhouse_vertica/: README.md  clickhouse_test.py  docker-compose.yml  perfomance_comparison.py  pyproject.toml  vertica_test.py
comparison_clickhouse_vertica/clickhouse-config/: default-user.xml
comparison_mongo_postres/: README.md  compose.yml  mongo_test.py  perfomance_comparison.py  postgres_test.py  pyproject.toml  settings.py
comparison_pg_es/: README.md  benchmark_results.csv  es.py  fill_es_from_pg.py  perf.py  pg.py  requirements.txt  settings.py
content_service/src/: main.py
content_service/src/api/: cache.py  swagger.py
content_service/src/core/: __init__.py  config.py
content_service/src/db/: postgres.py
content_service/src/repositories/: sqlalchemy_repository.py
content_service/src/utils/: config.py  mapper.py
etl/: elastic.py  etl.py  postgres.py  states.py
etl/common/: es_movies_schema.json  requirements.txt
etlkafkaclickhouse/: Dockerfile
frontend_service/: Dockerfile
frontend_service/frontend/: index.html
frontend_service/frontend/assets/: style.css
frontend_service/frontend/js/: fastapi.js
frontend_service/nginx/: nginx.conf
kafka_etl/: Dockerfile  clickhouse_writer.py  etl.py  kafka_consumer_wrapper.py  requirements.txt  settings.py
kafka_etl/clickhouse_docker/: clickhouse-compose.yml
kafka_etl/kafka_docker/: kafka-compose.yml
mailer_api/: Dockerfile  requirements.txt
mailer_api/src/: main.py
mailer_api/src/api/: cache.py
mailer_api/src/core/: config.py  logger.py
mongo_db_user_api/: Dockerfile  requirements.txt
mongo_db_user_api/src/: main.py
mongo_db_user_api/src/api/: cache.py  swagger.py
mongo_db_user_api/src/core/: config.py
notification_service/: Dockerfile  requirements.txt
notification_service/src/: main.py
notification_worker/: Dockerfile  requirements.txt
notification_worker/src/: main.py
partitioner/: Dockerfile  main.py
partitioner/common/: requirements.txt
recommendation/: Dockerfile  pyproject.toml  requirements.txt  Защита диплома.docx
recommendation/src/: main.py
recommendation/src/api/: __init__.py  docs.py  endpoint_descriptions.py
recommendation/src/api/recomendation/v1/: recommendations.py
recommendation/src/api/v1/: __init__.py  recommendations.py
recommendation/src/application/: factory.py  middleware.py
recommendation/src/core/: __init__.py  config.py  logger.py
recommendation/src/db/: beanie.py
recommendation/src/models/: video_completion.py
recommendation/src/repositories/: base_repository.py  beanie_repository.py
recommendation/src/repositories/completion/: video_completion.py
recommendation/src/schemas/: mixin.py  recommendation.py
recommendation/src/schemas/movies/: films.py  genres.py  persons.py
recommendation/src/services/: base_service.py  cache.py  recomendation_service.py
recommendation/src/services/completion/: video_completion.py
recommendation/src/services/movies/: films.py
recommendation/tests/: conftest.py  test_recommendation.py
recommendation/tests/testdata/: history.py  movies.py  schemas.py
recommendation/uml_diagrams/: uml_code.txt
recommendation_service/: Dockerfile
recommendation_service/src/: main.py
recommendation_service/tests/: conftest.py  test_recommendation.py
shortener/: Dockerfile  README.md  main.py  requirements.txt
src/models/: base.py
src/services/: recomendation_service.py
swagger_service/src/: main.py
tasks/: 06_etl_persons.md
tests/: docker-compose.yml  requirements.txt
tests/recommendation/: README.md  conftest.py  test_cache_and_resilience.py  test_rank_weights.py  test_recommend_api.py  test_recommendation_service.py
tests/testdata/: database_dump.sql  genres.json  movies.json  persons.json  schemas.py
tests/utils/: wait_for_es.py  wait_for_nginx.py  wait_for_redis.py
ugc_api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ugc_api/src/: main.py
ugc_api/src/api/: __init__.py
ugc_api/src/api/v1/: __init__.py  click.py  page_view.py  search_filter.py  video_completion.py  video_quality.py
ugc_api/src/application/: errors_handlers.py  factory.py
ugc_api/src/core/: __init__.py  config.py  logger.py
ugc_api/src/db/: __init__.py  engine.py  kafka.py
ugc_api/src/models/: __init__.py  base.py  click.py  page_view.py  search_filter.py  video_completion.py  video_quality.py
ugc_api/src/services/: __init__.py  click.py  kafka.py  page_view.py  search_filter.py  video_completion.py  video_quality.py
ugc_api/tests/: conftest.py
ugc_api/tests/functional/: test_click.py  test_page_view.py  test_search_filter.py  test_video_completion.py  test_video_quality.py
uml_diagrams/as_is/: uml_code.txt
uml_diagrams/to_be/: uml_code.txt
websocket/: Dockerfile  requirements.txt
websocket/src/: main.py
(+139 files in other folders)
