[project]
name = "comparison"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "clickhouse-connect (>=0.8.17,<0.9.0)",
    "faker (>=37.4.0,<38.0.0)",
    "vertica-python (>=1.4.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
