[project]
name = "comparison_mongo_postgres"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "faker (>=37.4.0,<38.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-print (>=5.0.0,<6.0.0)",
    "flake8-unused-arguments (>=0.0.13,<0.0.14)",
    "flake8-commas (>=4.0.0,<5.0.0)",
    "flake8-functions (>=0.0.8,<0.0.9)"
]

[tool.black]
line-length = 79

[tool.isort]
line_length=79
multi_line_output=3
include_trailing_comma=true

[tool.flake8]
ignore = ["U100"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
