[project]
name = "recommendation-service"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standart] (>=0.118.0,<0.119.0)",
    "motor (>=3.7.1,<4.0.0)",
    "elasticsearch (>=9.1.1,<10.0.0)",
    "beanie (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "python3-logstash (>=0.4.80,<0.5.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.1.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry]
package-mode = false