[project]
name = "ugc_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr Burganov",email = "brg-lks@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sentry-sdk[fastapi] (>=2.32.0,<3.0.0)",
]


[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^24.12.12"
flake8-builtins = "^2.5.0"
flake8-class-attributes-order = "^0.2.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.16.0"
flake8-debugger = "^4.1.2"
flake8-functions = "^0.0.8"
flake8-isort = "^6.1.2"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
flake8-quotes = "^3.4.0"
flake8-string-format = "^0.3.0"
flake8-variables-names = "^0.0.6"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.2.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [{ include = "src" }]


[tool.black]
skip-string-normalization = false
line-length = 79
target-version = ["py311"]
extend-exclude = "__init__.py,.venv,alembic,docker,.git,__pycache__"


[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
skip = "__init__.py,.venv,alembic,docker,.git,__pycache__"


[tool.flake8]
max-line-length = 79
ignore = "E203, E266, E501, W503, Q000, B008, C812"
exclude = "__init__.py,.venv,alembic,docker,.git,__pycache__"


[tool.coverage.run]
omit = [
    "src/main.py",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html"
testpaths = "tests"
